rough fix for webkit overflow and display inline-block

--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,11 @@ line-height:48px;
 text-transform:uppercase;
 }
 
+#beings > a.editing
+{
+overflow:visible;
+}
+
 #showBeing
 {
 position:absolute;
